tests/errors/E029.zen
void main() {
    @an_unknown_intrinsic();   // E029: Call to an unknown intrinsic function.
}